// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Drawer render correctly 1`] = `
<div
  class="Drawer"
>
  <div
    class="show-drawer"
    style="width:0;transform:translateX(0px)"
  >
    test
  </div>
  <div
    class="operate-drawer"
    style="transform:translateX(0px);background:linear-gradient(to right, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0))"
  >
    <div
      class="scale-wrapper"
      style="transform:rotateZ(0deg)"
    >
      <img
        src="../../assets/Drawer/arrow.png"
      />
    </div>
  </div>
</div>
`;

exports[`Drawer render correctly 2`] = `
<div
  class="Drawer"
>
  <div
    class="show-drawer"
    style="width:0;transform:translateX(0px)"
  >
    test
  </div>
  <div
    class="operate-drawer"
    style="transform:translateX(0px);background:linear-gradient(to right, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0))"
  >
    <div
      class="scale-wrapper"
      style="transform:rotateZ(180deg)"
    >
      <img
        src="../../assets/Drawer/arrow.png"
      />
    </div>
  </div>
</div>
`;
